# zentora-backend

./: .gitignore  .pre-commit-config.yml  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: keep-alive.yml
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  utils.py
app/db/: client.py
app/schemas/: auth.py
tests/auth/: test_register.py
