[project]
name = "zentora-backend"
version = "0.1.0"
description = "Zentora gestiona usuarios, autenticación, datos y soporta al asistente inteligente Nexa para análisis de Trading"
authors = [
    {name = "Miguel Teran", email = "miguel.teranj02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
