[project]
authors = [
  {name = "Miguel Teran", email = "miguel.teranj02@gmail.com"},
]
dependencies = [
  "fastapi (>=0.116.1,<0.117.0)",
  "uvicorn[standard] (>=0.35.0,<0.36.0)",
  "supabase (>=2.18.1,<3.0.0)",
  "pydantic[email] (>=2.11.8,<3.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "pytest-asyncio (>=1.2.0,<2.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
]
description = "Zentora gestiona usuarios, autenticación, datos y soporta al asistente inteligente Nexa para análisis de Trading"
name = "zentora-backend"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"

[tool.poetry]
package-mode = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
